php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #42890 Constant "LIST" defined by mysqlclient and c-client
Submitted: 2007-10-08 13:33 UTC Modified: 2010-12-20 12:29 UTC
From: erki at aring dot ee Assigned: andrey (profile)
Status: Closed Package: Compile Failure
PHP Version: 6CVS-2007-10-08 (snap) OS: Linux (Debian lenny/sid)
Private report: No CVE-ID: None
 [2007-10-08 13:33 UTC] erki at aring dot ee
Description:
------------
There is a little hack in ext/mysqli/php_mysqli_structs.h:

/* A little hack to prevent build break, when mysql is used together with
 * c-client, which also defines LIST.
 */
#ifdef LIST
#undef LIST
#endif


The same hack is also needed in ext/mysql/php_mysql.h, otherwise I get the following error during compilation:
/bin/sh /usr/local/src/php/php6.0-200710081030/libtool --silent --preserve-dup-deps --mode=compile /usr/local/src/php/php6.0-200710081030/meta_ccld  -Imain/ -I/usr/local/src/php/php6.0-200710081030/main/ -DPHP_ATOM_INC -I/usr/local/src/php/php6.0-200710081030/include -I/usr/local/src/php/php6.0-200710081030/main -I/usr/local/src/php/php6.0-200710081030 -I/usr/local/src/php/php6.0-200710081030/ext/ereg/regex -I/usr/include/libxml2 -I/usr/local/src/php/php6.0-200710081030/pcrelib -I/usr/local/src/php/php6.0-200710081030/ext/date/lib -I/usr/include/freetype2 -I/usr/include/c-client -I/usr/local/src/php/php6.0-200710081030/ext/mbstring/libmbfl -I/usr/local/src/php/php6.0-200710081030/ext/mbstring/libmbfl/mbfl -I/usr/include/mysql -I/usr/include/tidy -I/usr/local/src/php/php6.0-200710081030/TSRM -I/usr/local/src/php/php6.0-200710081030/Zend  -D_REENTRANT -DTHREAD=1  -I/usr/include -g -O2 -pthread -DZTS   -c main/internal_functions.c -o main/internal_functions.lo
In file included from /usr/include/mysql/mysql.h:72,
                 from /usr/local/src/php/php6.0-200710081030/ext/mysql/php_mysql.h:52,
                 from main/internal_functions.c:56:
/usr/include/mysql/my_list.h:26: error: expected identifier or '(' before numeric constant
/usr/include/mysql/my_list.h:30: error: expected identifier or '(' before numeric constant
/usr/include/mysql/my_list.h:31: error: expected identifier or '(' before numeric constant
/usr/include/mysql/my_list.h:32: error: expected identifier or '(' before numeric constant
/usr/include/mysql/my_list.h:33: error: expected identifier or '(' before numeric constant
/usr/include/mysql/my_list.h:34: error: expected declaration specifiers or '...' before numeric constant
/usr/include/mysql/my_list.h:35: error: expected declaration specifiers or '...' before numeric constant
/usr/include/mysql/my_list.h:36: error: expected declaration specifiers or '...' before numeric constant
In file included from /usr/local/src/php/php6.0-200710081030/ext/mysql/php_mysql.h:52,
                 from main/internal_functions.c:56:
/usr/include/mysql/mysql.h:295: error: expected specifier-qualifier-list before numeric constant
/usr/include/mysql/mysql.h:684: error: expected specifier-qualifier-list before numeric constant
make: *** [main/internal_functions.lo] Error 1



Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2007-10-08 16:00 UTC] andrey@php.net
I don't think the hack is even needed in php_mysqli_structs.h
It came from php_mysqli.h and there it was needed but nowadays php_mysqli_structs.h is not a public header and won't be included when the module is linked - internal_functions_xxx.c is compiled. Therefore I am going to do the same, just create php_mysql_structs.h .
 [2007-10-08 18:28 UTC] andrey@php.net
Please try the next snapshots.
Fixed in 5_2, 5_3 and HEAD
 [2010-12-20 12:29 UTC] jani@php.net
-Package: Tidy +Package: Compile Failure -Assigned To: +Assigned To: andrey
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Fri Sep 25 16:00:02 2026 UTC