Fix for bug #42890  Constant "LIST" defined by mysqlclient and c-client